# dotfiles

./: .gitignore  AGENTS.md  Brewfile  Brewfile.cask  CLAUDE.md  README.md  aliases  coc-settings.json  gitconfig  gitconfig_private  hk.pkl  links.tsv  mise.toml  psqlrc  tmux.conf  treefmt.toml  vimrc  zshenv  zshrc
.claude/: settings.local.json
.git.backup/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index  packed-refs
.git.backup/logs/: HEAD
.github/workflows/: mise.yml  nix.yml
ai-rules/: mcp.json
ai-rules/prompts/: orchestrator.md
alacritty/: alacritty.yml
codex/prompts/: ai-news-topics.md
cursor/: keybindings.json  settings.json
docs/: nix-to-mise-map.md
e5/812533879c/: metadata.json
ghostty/: config
git/: gitconfig  gitconfig_private  gitignore  gitmessage
git_template/info/: exclude
herdr/: README.md  config.toml
herdr/plugins/agents-picker/: Cargo.toml  README.md  herdr-plugin.toml
herdr/plugins/agents-picker/src/: app.rs  fuzzy.rs  herdr.rs  main.rs  ui.rs
lazygit/: config.yml
mise/: config.toml
nix/: darwin.nix  flake.nix  home.nix  nix.conf
nvim/: init.lua  lazy-lock.json
nvim/lua/: autocommands.lua  colors.lua  dap-config.lua  keymaps.lua  options.lua  plugins.lua  plugins_packer.lua  treesitter-compat.lua  treesitter-config.lua
nvim/plugin/: packer_compiled.lua
nvim/viml/: init.vim  (+3 more)
starship/: starship.toml
tmux/: macos.conf  statusline.conf  tmux.conf  utility.conf
vim/: vimrc
zed/: keymap.json  keymap.jsonc  settings.json  settings.jsonc
zellij/: README.md  config.kdl
zsh/: zprofile  zshenv  zshrc
(+122 files in other folders)
