[package]
name = "agents-picker"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[lints.rust]
future-incompatible = "warn"
nonstandard-style = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
redundant_clone = "warn"

[profile.release]
lto = true
strip = true
codegen-units = 1
